tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/MarkerComparator#compareString(String,String).mjava
	private int compareString(String l, String r) {
		return l.compareTo(r);
	}

